# ZLMediaKit

./: CMakeCache.txt  CMakeLists.txt  Makefile  UpgradePlan.md  ZLMVersion.h  cmake_install.cmake
.windsurf/rules/: 01.md
3rdpart/: Makefile  cmake_install.cmake
ai-vision/: CMakeLists.txt  README.md
ai-vision/include/: AIPipeline.h  AITaskManager.h  AlertEngine.h  DetectionResult.h  FrameConverter.h  GpuUploader.h  InferenceEngine.h  JsonHelper.h  ModelRegistry.h  YoloDetector.h
ai-vision/src/alert/: AlertEngine.cpp  AlertRule.cpp
ai-vision/src/core/: AIPipeline.cpp  DetectionResult.cpp  FrameConverter.cpp  GpuUploader.cpp  InferenceEngine.cpp  JsonHelper.cpp  ModelRegistry.cpp  YoloDetector.cpp
ai-vision/src/task/: AITaskManager.cpp  TaskScheduler.cpp
api/: Makefile  cmake_install.cmake  mk_export.h
api/tests/: Makefile  cmake_install.cmake
cmake/: FindOnnxRuntime.cmake
conf/: ai_tasks.json.template  alert_rules.json.template  config.ini
docs/: AI_ARCHITECTURE.md  AI_DEPENDENCIES.md  CURRENT_STATUS.md  FINAL_STATUS.md  GPU_AI_STRATEGY.md  INTEGRATION_GUIDE.md  TODO_COMPLETION.md  TODO_PROGRESS.md
ext-codec/: Makefile  cmake_install.cmake
server/: Makefile  cmake_install.cmake
src/: Makefile  cmake_install.cmake
srt/: Makefile  cmake_install.cmake
tests/: Makefile  cmake_install.cmake
